force-app/main/default/objects/Booking__c/fields/Allow_Online_Guest_Joining__c.field-meta.xml
<CustomField>
    <fullName>Allow_Online_Guest_Joining__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Online Guest Joining</label>
    <type>Checkbox</type>
</CustomField>