force-app/main/default/objects/Booking__c/fields/Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Date__c</fullName>
    <formula>TEXT( DAY( Booking_Date__c ) )</formula>
    <label>Booking Date</label>
    <type>Text</type>
</CustomField>