force-app/main/default/objects/Booking__c/fields/Appointment_Day__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Day__c</fullName>
    <formula>CASE(WEEKDAY( Booking_Date__c ), 
1, &apos;Sunday&apos;, 
2, &apos;Monday&apos;, 
3, &apos;Tuesday&apos;, 
4, &apos;Wednesday&apos;, 
5, &apos;Thursday&apos;, 
6, &apos;Friday&apos;, 
&apos;Saturday&apos;)</formula>
    <label>Booking Day</label>
    <type>Text</type>
</CustomField>