force-app/main/default/objects/Booking__c/fields/Available_Make_up_Units__c.field-meta.xml
<CustomField>
    <fullName>Available_Make_up_Units__c</fullName>
    <label>Available Make-up mins.</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>