force-app/main/default/objects/Booking__c/fields/Booking_Created_Via__c.field-meta.xml
<CustomField>
    <fullName>Booking_Created_Via__c</fullName>
    <label>Booking Created Via</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Portal</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>