force-app/main/default/objects/Booking__c/fields/Booking_Date_New__c.field-meta.xml
<CustomField>
    <fullName>Booking_Date_New__c</fullName>
    <formula>TEXT( DAY( Booking_Date__c ) )</formula>
    <label>Booking Date New</label>
    <type>Text</type>
</CustomField>