force-app/main/default/objects/Booking__c/fields/Booking_number_backend__c.field-meta.xml
<CustomField>
    <fullName>Booking_number_backend__c</fullName>
    <displayFormat>BID-{000000}</displayFormat>
    <label>Booking number(backend)</label>
    <type>AutoNumber</type>
</CustomField>