force-app/main/default/objects/Booking__c/fields/Booking_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Booking_Start_Date_Time__c</fullName>
    <description>Created to be managed in Case Reports</description>
    <formula>CASE(WEEKDAY( Booking_Date__c ), 
1, &apos;Sun&apos;, 
2, &apos;Mon&apos;, 
3, &apos;Tue&apos;, 
4, &apos;Wed&apos;, 
5, &apos;Thu&apos;, 
6, &apos;Fri&apos;, 
&apos;Sat&apos;) &amp; &apos;, &apos; &amp; 

CASE(MONTH( Booking_Date__c ), 
1, &apos;Jan&apos;, 
2, &apos;Feb&apos;, 
3, &apos;Mar&apos;, 
4, &apos;Apr&apos;, 
5, &apos;May&apos;, 
6, &apos;Jun&apos;, 
7, &apos;Jul&apos;, 
8, &apos;Aug&apos;, 
9, &apos;Sep&apos;, 
10,&apos;Oct&apos;, 
11,&apos;Nov&apos;, 
&apos;Dec&apos;) &amp; &apos; &apos; &amp; 
TEXT(DAY(Booking_Date__c )) &amp; &apos; &apos; &amp; 

TEXT(YEAR(Booking_Date__c )) &amp; &apos; @ &apos; &amp; 
IF( 
VALUE(TEXT(HOUR( Start_Time__c )))&lt;=0,TEXT(HOUR(Start_Time__c )+12), 
IF( 
VALUE(TEXT(HOUR(Start_Time__c )))&gt;12,TEXT(HOUR(Start_Time__c )-12), 
TEXT(HOUR(Start_Time__c )) 
) 
) 
&amp;&quot;:&quot;&amp;LPAD(TEXT(MINUTE(Start_Time__c )),2,&apos;0&apos;)&amp;&quot; &quot;&amp;IF(VALUE(TEXT(HOUR(Start_Time__c ))) &lt; 12,&quot;AM&quot;,&quot;PM&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Start Date &amp; Time</label>
    <type>Text</type>
</CustomField>