force-app/main/default/objects/Booking__c/fields/Booking_Time_Text__c.field-meta.xml
<CustomField>
    <fullName>Booking_Time_Text__c</fullName>
    <label>Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>