force-app/main/default/objects/Booking__c/fields/Booking_Year__c.field-meta.xml
<CustomField>
    <fullName>Booking_Year__c</fullName>
    <formula>TEXT( YEAR( Booking_Date__c ) )</formula>
    <label>Booking_Year</label>
    <type>Text</type>
</CustomField>