force-app/main/default/objects/Booking__c/fields/Calendar__c.field-meta.xml
<CustomField>
    <fullName>Calendar__c</fullName>
    <formula>HYPERLINK(&apos;/one/one.app#/alohaRedirect/apex/aureusCalendar?id=&apos;+ Id , IMAGE(&quot;/servlet/servlet.FileDownload?file=0156F00000HeFZj&quot;, &quot;Go to Calendar&quot;),&apos;_blank&apos; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Go to Calendar</inlineHelpText>
    <label>Calendar</label>
    <type>Text</type>
</CustomField>