force-app/main/default/objects/Booking__c/fields/Camp_Days__c.field-meta.xml
<CustomField>
    <fullName>Camp_Days__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>this field for camp class  for select customer Camp Day</description>
    <label>Camp Days</label>
    <referenceTo>Camp_Days__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>