force-app/main/default/objects/Booking__c/fields/Camp_Id__c.field-meta.xml
<CustomField>
    <fullName>Camp_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>this field for camp class for manage select customer Camp name</description>
    <label>Camp Id</label>
    <referenceTo>Camp__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>