force-app/main/default/objects/Booking__c/fields/Canceled_By__c.field-meta.xml
<CustomField>
    <fullName>Canceled_By__c</fullName>
    <label>Canceled By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>