force-app/main/default/objects/Booking__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Holidays</fullName>
            </value>
            <value>
                <fullName>School trip</fullName>
            </value>
            <value>
                <fullName>Exams</fullName>
            </value>
            <value>
                <fullName>MC</fullName>
            </value>
            <value>
                <fullName>Personal Reason</fullName>
            </value>
            <value>
                <fullName>Teacher MC</fullName>
            </value>
            <value>
                <fullName>Teacher Leave</fullName>
            </value>
            <value>
                <fullName>Admin Mistake</fullName>
                <isActive>false</isActive>
                <label>Admin Mistake</label>
            </value>
            <value>
                <fullName>Away</fullName>
                <isActive>false</isActive>
                <label>Away</label>
            </value>
            <value>
                <fullName>Cancelled Less than 24 hours</fullName>
                <isActive>false</isActive>
                <label>Cancelled Less than 24 hours</label>
            </value>
            <value>
                <fullName>No Show</fullName>
                <isActive>false</isActive>
                <label>No Show</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>