force-app/main/default/objects/Booking__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Travel</fullName>
            </value>
            <value>
                <fullName>Break</fullName>
            </value>
            <value>
                <fullName>Lunch</fullName>
            </value>
            <value>
                <fullName>Placeholder</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Hours in-lieu</fullName>
            </value>
            <value>
                <fullName>Recital</fullName>
            </value>
            <value>
                <fullName>Contract Programme</fullName>
            </value>
            <value>
                <fullName>Leave</fullName>
            </value>
            <value>
                <fullName>5th Lesson</fullName>
            </value>
            <value>
                <fullName>Holiday</fullName>
            </value>
            <value>
                <fullName>Camp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>