force-app/main/default/objects/Booking__c/fields/Center__c.field-meta.xml
<CustomField>
    <fullName>Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Centre Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Centre</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Bookings (Centre)</relationshipLabel>
    <relationshipName>CenterBooking</relationshipName>
    <type>Lookup</type>
</CustomField>