force-app/main/default/objects/Booking__c/fields/Center_Address__c.field-meta.xml
<CustomField>
    <fullName>Center_Address__c</fullName>
    <formula>Center__r.Name &amp; BR() &amp; Center__r.BillingStreet &amp; BR() &amp; Center__r.BillingCity &amp; &quot;, &quot; &amp; Center__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Centre Address</label>
    <type>Text</type>
</CustomField>