force-app/main/default/objects/Booking__c/fields/Center_Id__c.field-meta.xml
<CustomField>
    <fullName>Center_Id__c</fullName>
    <formula>IF( NOT(ISBLANK(Enrolment__c)),CASESAFEID(Enrolment__r.Center__c),&apos;&apos;)</formula>
    <label>Center Id</label>
    <type>Text</type>
</CustomField>