force-app/main/default/objects/Booking__c/fields/Center_Location__c.field-meta.xml
<CustomField>
    <fullName>Center_Location__c</fullName>
    <formula>Center__r.Name</formula>
    <label>Center Location</label>
    <type>Text</type>
</CustomField>