force-app/main/default/objects/Booking__c/fields/Center_Name__c.field-meta.xml
<CustomField>
    <fullName>Center_Name__c</fullName>
    <description>This formula field is use for displaying name of center on booking object</description>
    <formula>Opportunity__r.Account.Name</formula>
    <label>Center Name</label>
    <type>Text</type>
</CustomField>