force-app/main/default/objects/Booking__c/fields/Center_Website__c.field-meta.xml
<CustomField>
    <fullName>Center_Website__c</fullName>
    <formula>Center__r.Website</formula>
    <label>Center Website</label>
    <type>Text</type>
</CustomField>