force-app/main/default/objects/Booking__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Class</label>
    <referenceTo>Class__c</referenceTo>
    <relationshipLabel>Bookings (Group Class)</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>