force-app/main/default/objects/Booking__c/fields/CompleteEnrolmentUrl__c.field-meta.xml
<CustomField>
    <fullName>CompleteEnrolmentUrl__c</fullName>
    <formula>HYPERLINK($Label.Aureus_Site &amp; &quot;/enrolmentprocess?id=&quot; &amp; Enrolment__c, &quot;click here&quot;, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CompleteEnrolmentUrl</label>
    <type>Text</type>
</CustomField>