force-app/main/default/objects/Booking__c/fields/Composition_URL__c.field-meta.xml
<CustomField>
    <fullName>Composition_URL__c</fullName>
    <label>Composition URL</label>
    <type>TextArea</type>
</CustomField>