force-app/main/default/objects/Booking__c/fields/Days_Count__c.field-meta.xml
<CustomField>
    <fullName>Days_Count__c</fullName>
    <formula>Booking_Date__c - today()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days_Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>