force-app/main/default/objects/Booking__c/fields/Enrolment__c.field-meta.xml
<CustomField>
    <fullName>Enrolment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enrolment</label>
    <referenceTo>Enrolment__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>