force-app/main/default/objects/Booking__c/fields/Expiry_Of_Make_up_Credit__c.field-meta.xml
<CustomField>
    <fullName>Expiry_Of_Make_up_Credit__c</fullName>
    <formula>TEXT(DAY(Make_up_Expiry_Date__c))+&apos; &apos;+ 
CASE(MONTH(Make_up_Expiry_Date__c), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;None&quot;) 
+ &apos; &apos; 
+ TEXT(YEAR(Make_up_Expiry_Date__c))</formula>
    <label>Expiry Of Make-up Credit</label>
    <type>Text</type>
</CustomField>