force-app/main/default/objects/Booking__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <description>Grade for Ossia</description>
    <inlineHelpText>Grade for Ossia</inlineHelpText>
    <label>Grade</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grade</valueSetName>
    </valueSet>
</CustomField>