force-app/main/default/objects/Booking__c/fields/Group_Class__c.field-meta.xml
<CustomField>
    <fullName>Group_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group Class</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Bookings (Group Lesson)</relationshipLabel>
    <relationshipName>Bookings1</relationshipName>
    <type>Lookup</type>
</CustomField>