force-app/main/default/objects/Booking__c/fields/Individual_Booking__c.field-meta.xml
<CustomField>
    <fullName>Individual_Booking__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is the checkbox field to identified that booking is individual or not.</description>
    <label>Individual Booking</label>
    <type>Checkbox</type>
</CustomField>