force-app/main/default/objects/Booking__c/fields/Instrument__c.field-meta.xml
<CustomField>
    <fullName>Instrument__c</fullName>
    <formula>Text(Package__r.Program__r.Instrument__c)</formula>
    <label>Instrument</label>
    <type>Text</type>
</CustomField>