force-app/main/default/objects/Booking__c/fields/Instrument_Lesson__c.field-meta.xml
<CustomField>
    <fullName>Instrument_Lesson__c</fullName>
    <inlineHelpText>To be used in email templates to indicate Instrument Lesson also includes Make-Up and Ad-Hoc Lessons
Managed by System Workflow</inlineHelpText>
    <label>Instrument Lesson</label>
    <length>255</length>
    <type>Text</type>
</CustomField>