force-app/main/default/objects/Booking__c/fields/Is_fifth_booking__c.field-meta.xml
<CustomField>
    <fullName>Is_fifth_booking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is fifth booking</label>
    <type>Checkbox</type>
</CustomField>