force-app/main/default/objects/Booking__c/fields/Is_Lesson_Type_Change__c.field-meta.xml
<CustomField>
    <fullName>Is_Lesson_Type_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Lesson Type Change</label>
    <type>Checkbox</type>
</CustomField>