force-app/main/default/objects/Booking__c/fields/Is_Reschedule_Booking__c.field-meta.xml
<CustomField>
    <fullName>Is_Reschedule_Booking__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>An Email is sent to the Parent when this is checked!!
Sent via Workflow!</inlineHelpText>
    <label>Is Reschedule Booking</label>
    <type>Checkbox</type>
</CustomField>