force-app/main/default/objects/Booking__c/fields/Is_Send_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Is_Send_Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Send Reminder</label>
    <type>Checkbox</type>
</CustomField>