force-app/main/default/objects/Booking__c/fields/Lesson_Date__c.field-meta.xml
<CustomField>
    <fullName>Lesson_Date__c</fullName>
    <description>Lesson Date in day, dd mon yyyy format</description>
    <formula>Left(Appointment_Day__c,3) &amp; &quot;, &quot; &amp;  Appointment_Date__c &amp; &quot; &quot; &amp; Left ( Appointment_Month__c, 3) &amp; &quot; &quot; &amp; Text(Year (Booking_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lesson Date</label>
    <type>Text</type>
</CustomField>