force-app/main/default/objects/Booking__c/fields/Lesson_Type__c.field-meta.xml
<CustomField>
    <fullName>Lesson_Type__c</fullName>
    <label>Lesson Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Centre</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>