force-app/main/default/objects/Booking__c/fields/Make_up_Credit_Note__c.field-meta.xml
<CustomField>
    <fullName>Make_up_Credit_Note__c</fullName>
    <label>Make-up Credit Note</label>
    <type>TextArea</type>
</CustomField>