force-app/main/default/objects/Booking__c/fields/Make_up_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Make_up_Expiry_Date__c</fullName>
    <inlineHelpText>Make-up expiry date set when a booking marked as Make-up</inlineHelpText>
    <label>Make-up Expiry Date</label>
    <type>Date</type>
</CustomField>