force-app/main/default/objects/Booking__c/fields/Make_up_Utilize_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Make_up_Utilize_Bookings__c</fullName>
    <label>Make-up Utilize Bookings</label>
    <length>255</length>
    <type>Text</type>
</CustomField>