force-app/main/default/objects/Booking__c/fields/Makeup_Given__c.field-meta.xml
<CustomField>
    <fullName>Makeup_Given__c</fullName>
    <externalId>true</externalId>
    <label>Makeup Given</label>
    <length>10</length>
    <type>Text</type>
</CustomField>