force-app/main/default/objects/Booking__c/fields/Makeup_Reason__c.field-meta.xml
<CustomField>
    <fullName>Makeup_Reason__c</fullName>
    <label>Make-up Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Teacher MC</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Teacher leaves</fullName>
            </value>
            <value>
                <fullName>School Event</fullName>
            </value>
            <value>
                <fullName>Admin Error</fullName>
            </value>
            <value>
                <fullName>Holidays</fullName>
            </value>
            <value>
                <fullName>School trip</fullName>
            </value>
            <value>
                <fullName>Exams</fullName>
            </value>
            <value>
                <fullName>Student MC</fullName>
            </value>
            <value>
                <fullName>Personal Reason</fullName>
            </value>
            <value>
                <fullName>Admin/CM Exception</fullName>
                <isActive>false</isActive>
                <label>Admin/CM Exception</label>
            </value>
            <value>
                <fullName>Customer Emergency</fullName>
                <isActive>false</isActive>
                <label>Customer Emergency</label>
            </value>
            <value>
                <fullName>Emergency Leave</fullName>
                <isActive>false</isActive>
                <label>Emergency Leave</label>
            </value>
            <value>
                <fullName>Non-Business Hours</fullName>
                <isActive>false</isActive>
                <label>Non-Business Hours</label>
            </value>
            <value>
                <fullName>Student MC Provided</fullName>
                <isActive>false</isActive>
                <label>Student MC Provided</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>