force-app/main/default/objects/Booking__c/fields/Online_Lesson_Passcode__c.field-meta.xml
<CustomField>
    <fullName>Online_Lesson_Passcode__c</fullName>
    <label>Online Lesson Passcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>