force-app/main/default/objects/Booking__c/fields/Online_Lesson_URL__c.field-meta.xml
<CustomField>
    <fullName>Online_Lesson_URL__c</fullName>
    <label>Online Lesson URL</label>
    <type>Url</type>
</CustomField>