force-app/main/default/objects/Booking__c/fields/Package__c.field-meta.xml
<CustomField>
    <fullName>Package__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Package</label>
    <referenceTo>Package__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>