force-app/main/default/objects/Booking__c/fields/Parent_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_First_Name__c</fullName>
    <formula>If (RecordType.DeveloperName = &quot;Facility&quot;, Student__r.FirstName , Student__r.Parent__r.FirstName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent First Name</label>
    <type>Text</type>
</CustomField>