force-app/main/default/objects/Booking__c/fields/Parent_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Last_Name__c</fullName>
    <formula>If (RecordType.DeveloperName = &quot;Facility&quot;, Student__r.LastName , Student__r.Parent__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Last Name</label>
    <type>Text</type>
</CustomField>