force-app/main/default/objects/Booking__c/fields/Parent_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Name__c</fullName>
    <formula>If (RecordType.DeveloperName = &quot;Facility&quot;, Student__r.FirstName , Student__r.Parent__r.FirstName)&amp;&quot; &quot;&amp; If (RecordType.DeveloperName = &quot;Facility&quot;, Student__r.LastName , Student__r.Parent__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Name</label>
    <type>Text</type>
</CustomField>