force-app/main/default/objects/Booking__c/fields/Prev_Booking_Date__c.field-meta.xml
<CustomField>
    <fullName>Prev_Booking_Date__c</fullName>
    <label>Prev Booking Date</label>
    <type>Date</type>
</CustomField>