force-app/main/default/objects/Booking__c/fields/Prev_Start_Date_Time_Text__c.field-meta.xml
<CustomField>
    <fullName>Prev_Start_Date_Time_Text__c</fullName>
    <description>Managed by WF</description>
    <label>Prev Start Date &amp; Time Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>