force-app/main/default/objects/Booking__c/fields/Prev_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Prev_Start_Time__c</fullName>
    <label>Prev Start Time</label>
    <type>Time</type>
</CustomField>