force-app/main/default/objects/Booking__c/fields/Prev_Teacher__c.field-meta.xml
<CustomField>
    <fullName>Prev_Teacher__c</fullName>
    <label>Prev Teacher</label>
    <length>255</length>
    <type>Text</type>
</CustomField>