force-app/main/default/objects/Booking__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <formula>Package__r.Unit_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Unit Fee from Package</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>