force-app/main/default/objects/Booking__c/fields/Public_Holiday_Status__c.field-meta.xml
<CustomField>
    <fullName>Public_Holiday_Status__c</fullName>
    <description>This field is used in ipad enrolmentprocess when regular bookings are cancelled due to the public holiday. In this field we will maintain that particular holiday was on open/close status.</description>
    <label>Public Holiday Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>