force-app/main/default/objects/Booking__c/fields/Reschedule_Booking__c.field-meta.xml
<CustomField>
    <fullName>Reschedule_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reschedule Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Bookings</relationshipLabel>
    <relationshipName>Bookings</relationshipName>
    <type>Lookup</type>
</CustomField>