force-app/main/default/objects/Booking__c/fields/Resource_Category__c.field-meta.xml
<CustomField>
    <fullName>Resource_Category__c</fullName>
    <label>Resource Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aureus Student</fullName>
            </value>
            <value>
                <fullName>Conservatory</fullName>
            </value>
            <value>
                <fullName>Teacher Recital</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>