force-app/main/default/objects/Booking__c/fields/Room_Id__c.field-meta.xml
<CustomField>
    <fullName>Room_Id__c</fullName>
    <label>Room Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>