force-app/main/default/objects/Booking__c/fields/Same_Parent__c.field-meta.xml
<CustomField>
    <fullName>Same_Parent__c</fullName>
    <formula>IF(AND(Parent__c!=null,Parent__c == Student__c),True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Same Parent</label>
    <type>Checkbox</type>
</CustomField>